HHH-5335 - a few typo fixes in Dialect and in tests
git-svn-id: https://svn.jboss.org/repos/hibernate/core/trunk@20269 1b8cb986-b30d-0410-93ca-fae66ebed9b2